2018-04-24  Karen   <cerebrum@gagarin.uit.no>

    * access_FS.py: Merged uio version of this file into our version of it.

    * access_FS.py (undervisning.list_studenter_alle_kull): Students with studentstatkode 'DELTID' 
    are now included in the results from this method.

2018-03-15    <cerebrum@gagarin.uit.no>

	* Constants.py (Constants): Added 2 new constants
	contact_sito_mobile and contact_uit_mobile. these are needed to
	differentiate between sito and uit skype phonenumbers (for those
	with 2 accounts).

2018-03-02    <cerebrum@gagarin.uit.no>

	* bofhd_uit_cmds.py (BofhdExtension): person info formatSuggestion expects 'deceased' variable name, but gets 'deceased_date'. this caused NullPointerException in jbofh. renamed 'deceased_date' to 'deceased'

2018-02-23    <cerebrum@gagarin.uit.no>

	* OU.py (OUMixin.find): fixed but in finf function where it
	wouldnt use the propper find function for ous with stedkode.

2018-02-22    <cerebrum@gagarin.uit.no>

	* OU.py (OUMixin): Override Stedkode.py find(). If OU does not have stedkode, use OU.find() instead.

	* bofhd_uit_cmds.py (BofhdExtension._format_ou_name): Return None if OU does not have stedkode

2018-02-12    <cerebrum@cleomedes.uit.no>

	* OrgLDIF.py: UiT does not wish to populate the postalAddress
	attribute with neither person home address or work
	address. setting this to empty string

2018-01-29    <cerebrum@cleomedes.uit.no>

	* OrgLdif.py (OrgLdifUitMixin.update_org_object_entry): updated o and eduOrgLegalName attributes
	(OrgLdifUitMixin.generate_org_object): updated o and eduOrgLegalName attributes

2017-11-24    <cerebrum@cleomedes.uit.no>

	* bofhd_uit_cmds.py (BofhdExtension.user_history_filtered): this
	function was unable to return a string on the right format. the
	join() function did not work as intended on the list containing
	all the dicts holding changelog info. rewrote the function to
	return a single string as it should be